--- a/index.html
+++ b/index.html
@@ -19,28 +19,28 @@
     <h1 >AhmedTheeb</h1>
     <div class="row">
     <!--part 1-->
-    <div class="col">
+    <div class="col-sm">
         <img src="background.jpg"  width="110%">
         <h1>John Doe</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi quaerat dignissimos error, quis exercitationem possimus architecto beatae sunt repudiandae aperiam optio. Neque architecto ipsum earum dolorum quibusdam nobis sed est.</p>
         <button class="btn btn-danger">see profile</button>    
     </div>
     <!--part 2-->
-    <div class="col">
+    <div class="col-sm">
         <img src="background.jpg"   width="110%">
         <h1>John Doe</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi quaerat dignissimos error, quis exercitationem possimus architecto beatae sunt repudiandae aperiam optio. Neque architecto ipsum earum dolorum quibusdam nobis sed est.</p>
         <button class="btn btn-danger">see profile</button>    
     </div>
     <!--part 3-->
-       <div class="col">
+       <div class="col-sm">
         <img src="background.jpg"   width="110%">
         <h1>John Doe</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi quaerat dignissimos error, quis exercitationem possimus architecto beatae sunt repudiandae aperiam optio. Neque architecto ipsum earum dolorum quibusdam nobis sed est.</p>
         <button class="btn btn-danger">see profile</button>     
     </div>
     <!--part 4-->
-       <div class="col">
+       <div class="col-sm">
         <img src="background.jpg"    width="110%">
         <h1>John Doe</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi quaerat dignissimos error, quis exercitationem possimus architecto beatae sunt repudiandae aperiam optio. Neque architecto ipsum earum dolorum quibusdam nobis sed est.</p>
